# GoogletestInPractice

./: README.md
Chapter2/example/: CMake README.txt  CMakeLists.txt
Chapter2/example/include/: doc.h  sut.h
Chapter2/example/src/: main.cpp  sut.cpp
Chapter2/example/test/: CMakeLists.txt  gtest_ex1.cpp  gtest_ex2.cpp  gtest_ex3.cpp  gtest_ex4.cpp
Chapter3/: CMake README.txt
Chapter3/3.2/: CMakeLists.txt
Chapter3/AssertionsForExceptions/: gtest_main.cpp
Chapter3/AssertionsProvidedByDefault/: CMakeLists.txt  gtest_main1.cpp  gtest_main2.cpp  gtest_main3.cpp
Chapter3/DeathTests/: CMakeLists.txt  gtest_main.cpp
Chapter3/HowToApplyVariousTestDataToTestFixtures/: CMakeLists.txt  gtest_main1.cpp  gtest_main2.cpp  gtest_main3.cpp  gtest_main4.cpp  gtest_main5.cpp  gtest_main6.cpp  gtest_main7.cpp  gtest_main8.cpp
Chapter3/UsingAssertions/: CMakeLists.txt  gtest_main.cpp
Chapter3/UsingAssertionsInsideSubroutines/: gtest_main.cpp
Chapter3/UsingTestFixtures/: CMakeLists.txt  gtest_main1.cpp  gtest_main2.cpp
Chapter4/1_aMemberFunctionInAClassTemplate/include/: doc.h
Chapter4/1_aMemberFunctionInAClassTemplate/test/: CMakeLists.txt  gtest_main.cpp
Chapter4/2_aMemberFunctionTemplateInAClass/include/: doc.h  sut.h
Chapter4/2_aMemberFunctionTemplateInAClass/test/: CMakeLists.txt  gtest_main.cpp
Chapter4/3_aMemberFunctionTemplateInAClassTemplate/include/: doc.h
Chapter4/3_aMemberFunctionTemplateInAClassTemplate/src/: main.cpp  sut.cpp
Chapter4/3_aMemberFunctionTemplateInAClassTemplate/test/: CMakeLists.txt
Chapter4/4_aGlobalFunctionTemplate/include/: sut.h
Chapter4/4_aGlobalFunctionTemplate/src/: main.cpp
Chapter4/4_aGlobalFunctionTemplate/test/: CMakeLists.txt
Chapter4/5_aGlobalFunction/test/: CMakeLists.txt  gtest_main.cpp
Chapter4/6_aGlobalFunctionInALibrary/include/: sut.h
Chapter4/6_aGlobalFunctionInALibrary/src/: sut.cpp
Chapter4/6_aGlobalFunctionInALibrary/test/: CMakeLists.txt  gtest_main.cpp
Chapter4/7_aVirtualMemberFunction/include/: doc.h  sut.h
Chapter4/7_aVirtualMemberFunction/src/: main.cpp  sut.cpp
Chapter4/7_aVirtualMemberFunction/test/: CMakeLists.txt  gtest_main.cpp
Chapter4/8_aNonVirtualMemberFunction/include/: doc.h  sut.h
Chapter4/8_aNonVirtualMemberFunction/src/: main.cpp  sut.cpp
Chapter4/8_aNonVirtualMemberFunction/test/: CMakeLists.txt  gtest_main.cpp
Chapter4/ImplementationMethodAccordingToTheTypeOfTargetFunction/: CMakeLists.txt
Chapter4/ImplementationMethodAccordingToTheTypeOfTargetFunction/1/include/: sut.h
Chapter4/ImplementationMethodAccordingToTheTypeOfTargetFunction/1/src/: main.cpp  sut.cpp
Chapter4/ImplementationMethodAccordingToTheTypeOfTargetFunction/1/test/: CMakeLists.txt  gtest_main.cpp
Chapter4/ImplementationMethodAccordingToTheTypeOfTargetFunction/2/include/: sut.h
Chapter4/ImplementationMethodAccordingToTheTypeOfTargetFunction/2/src/: sut.cpp
Chapter4/ImplementationMethodAccordingToTheTypeOfTargetFunction/2/test/: CMakeLists.txt  gtest_main.cpp
Chapter4/ImplementationMethodAccordingToTheTypeOfTargetFunction/3/test/: CMakeLists.txt
Chapter4/ImplementationMethodAccordingToTheTypeOfTargetFunction/4/include/: doc.h  sut.h
Chapter4/ImplementationMethodAccordingToTheTypeOfTargetFunction/4/src/: sut.cpp
Chapter4/ImplementationMethodAccordingToTheTypeOfTargetFunction/4/test/: CMakeLists.txt  gtest_main.cpp
Chapter4/ImplementationMethodAccordingToTheTypeOfTargetFunction/5/include/: doc.h  sut.h
Chapter4/ImplementationMethodAccordingToTheTypeOfTargetFunction/5/src/: main.cpp  sut.cpp
Chapter4/ImplementationMethodAccordingToTheTypeOfTargetFunction/5/test/: CMakeLists.txt
Chapter4/ImplementationMethodAccordingToTheTypeOfTargetFunction/6/src/: main.cpp
Chapter4/ImplementationMethodAccordingToTheTypeOfTargetFunction/6/test/: CMakeLists.txt
Chapter4/ImplementationMethodAccordingToTheTypeOfTargetFunction/include/: doc1.h  sut1.h
Chapter4/ImplementationMethodAccordingToTheTypeOfTargetFunction/src/: main1.cpp  sut1.cpp
Chapter4/ImplementationMethodAccordingToTheTypeOfTargetFunction/test/: CMakeLists.txt  gtest_main1.cpp
